<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@drawable/dialog"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dialog_msg"
        android:textColor="#787266"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/put_your_name"
            android:textColor="#787266"/>

        <EditText
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#787266"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/game_dialog_button_left"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#787266"/>

        <Button
            android:id="@+id/game_dialog_button_right"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/new_game"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#787266"/>

    </LinearLayout>

</LinearLayout>